<resources>
    <string name="app_name">Investa XChange</string>

    <string name="search_hint">Search for a stock…</string>
    <string name="search">Search</string>
    <string name="search_error">We were unable to execute your search.  Please check your internet connection and try again.</string>

    <string name="label_favorite">Favorites</string>
    <string name="label_market">Market</string>
    <string name="label_market_detail">Market Detail</string>
    <string name="label_home">Portfolio</string>
    <string name="label_portfolio_asset_detail">Portfolio Detail</string>
    <string name="label_settings">Settings</string>
    <string name="label_user">Account</string>
    <string name="label_user_info">Account Information</string>

    <string name="action_bookmark">Bookmark this repo</string>
    <string name="action_bookmarks">View bookmarks</string>

    <string name="action_favorite">Favorite</string>
    <string name="action_share">Share</string>
    <string name="share_text">%1$s is trading at $%2$s</string>

    <string name="action_view_repo">View repo on GitHub</string>
    <string name="action_view_repo_error">There\'s no app on this device that can open a web page.  Try installing a web browser.</string>

    <string name="action_settings">Settings</string>

    <string name="pref_category_search">Search settings</string>

    <string name="home_chart_day">D</string>
    <string name="home_chart_week">W</string>
    <string name="home_chart_month">M</string>

    <string name="pref_sort_title">Sort by</string>
    <string name="pref_user_title">Search only for repos by this GitHub user</string>
    <string name="pref_language_title">Search by programming language</string>
    <string name="pref_first_issues_title">Minimum number of good first issues</string>

    <string name="pref_sort_key" translatable="false">sort</string>
    <string name="pref_user_key" translatable="false">user</string>
    <string name="pref_language_key" translatable="false">language</string>
    <string name="pref_first_issues_key" translatable="false">first_issues</string>

    <string name="pref_sort_entry_stars">Stars</string>
    <string name="pref_sort_entry_forks">Forks</string>
    <string name="pref_sort_entry_updated">Most-recently updated</string>

    <string name="pref_sort_val_stars" translatable="false">stars</string>
    <string name="pref_sort_val_forks" translatable="false">forks</string>
    <string name="pref_sort_val_updated" translatable="false">updated</string>

    <string name="pref_sort_default">@string/pref_sort_val_stars</string>

    <string name="pref_datapoint_title">Number of Data Points</string>
    <string name="pref_datapoint_key" translatable="false">Number of Data Points</string>


    <string name="pref_language_entry_c">C</string>
    <string name="pref_language_entry_cpp">C++</string>
    <string name="pref_language_entry_java">Java</string>
    <string name="pref_language_entry_kotlin">Kotlin</string>
    <string name="pref_language_entry_javascript">Javascript</string>
    <string name="pref_language_entry_rust">Rust</string>
    <string name="pref_language_entry_python">Python</string>

    <string name="pref_language_val_c" translatable="false">c</string>
    <string name="pref_language_val_cpp" translatable="false">c++</string>
    <string name="pref_language_val_java" translatable="false">java</string>
    <string name="pref_language_val_kotlin" translatable="false">kotlin</string>
    <string name="pref_language_val_javascript" translatable="false">javascript</string>
    <string name="pref_language_val_rust" translatable="false">rust</string>
    <string name="pref_language_val_python" translatable="false">python</string>

    <string name="pref_language_not_set">Not set</string>

    <plurals name="pref_language_summary">
        <item quantity="one">%d language</item>
        <item quantity="other">%d languages</item>
    </plurals>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>