<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/home">

    <fragment
        android:id="@+id/market"
        android:name="com.example.android.investaxchange.ui.MarketFragment"
        android:label="@string/label_market" >
        <action
            android:id="@+id/navigate_to_market_detail"
            app:destination="@id/market_detail" />
    </fragment>

    <fragment
        android:id="@+id/market_detail"
        android:name="com.example.android.investaxchange.ui.MarketDetailFragment"
        android:label="@string/label_market_detail" >
        <argument
            android:name="asset"
            app:argType="com.example.android.investaxchange.data.Asset" />
    </fragment>

    <fragment
        android:id="@+id/favorite"
        android:name="com.example.android.investaxchange.ui.FavoriteFragment"
        android:label="@string/label_favorite" >
    </fragment>

    <fragment
        android:id="@+id/home"
        android:name="com.example.android.investaxchange.ui.HomeFragment"
        android:label="@string/label_home">
        <action
            android:id="@+id/navigate_to_portfolio_asset_detail"
            app:destination="@id/portfolio_asset_detail" />
    </fragment>

    <fragment
        android:id="@+id/portfolio_asset_detail"
        android:name="com.example.android.investaxchange.ui.HomeFragment"
        android:label="@string/label_portfolio_asset_detail">
        <argument
            android:name="portfolioAsset"
            app:argType="com.example.android.investaxchange.data.PortfolioAssets" />
    </fragment>

    <fragment
        android:id="@+id/settings"
        android:name="com.example.android.investaxchange.ui.SettingsFragment"
        android:label="@string/label_settings" >
    </fragment>

</navigation>